Notifications : diagramme de Gantt

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -277,6 +277,7 @@ Notifications=Notifications
 JoursAvant=Jours avant
 Fin=Fin
 Persistant=Persistant
+Gantt=Diagramme de Gantt
 
 # evenement/evenementListe.html
 listeEvenements=Liste des événements
