--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -277,6 +277,7 @@ Notifications=Notifications
 JoursAvant=Days before
 Fin=End
 Persistant=Lasting
+Gantt=Gantt Chart
 
 # evenement/evenementListe.html
 listeEvenements=Events list
