gantt, ajout période : jour,mois,semaine

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -277,7 +277,14 @@ Notifications=Notifications
 JoursAvant=Jours avant
 Fin=Fin
 Persistant=Persistant
+
+# evenement/evenementNotifGantt.html
 Gantt=Diagramme de Gantt
+QuartJour=Quart Jour
+DemiJour=Demi Jour
+Jour=Jour
+Semaine=Semaine
+Mois=Mois
 
 # evenement/evenementListe.html
 listeEvenements=Liste des événements
