--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -277,7 +277,14 @@ Notifications=Notifications
 JoursAvant=Days before
 Fin=End
 Persistant=Lasting
+
+# evenement/evenementNotifGantt.html
 Gantt=Gantt Chart
+QuartJour=Quarter Jour
+DemiJour=Half Jour
+Jour=Day
+Semaine=Week
+Mois=Month
 
 # evenement/evenementListe.html
 listeEvenements=Events list
