Commentaire essaim formulaire spécifique

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -163,6 +163,8 @@ moinsdunesemaine=Moins d'une semaine
 moinsdunjour=Moins d'un jour
 datesprecises=Dates précises
 NotificationJoursAvant=Notification (jours avant)
+TacheDuree=Tâche durée
+notifPersite=Persistance
 
 #################### essaim ########################################
 
@@ -296,6 +298,9 @@ evenement=Événement
 
 # evenement/evenementSucreListe.html
 evenementssucre=Événements sucre
+
+# evenement/evenementCommentListe.html
+evenementscomm=Événements commentaire
 
 # evenement/evenementTraitementListe.html
 evenementstraitement=Événements traitement
