--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -163,6 +163,8 @@ moinsdunesemaine=Less than a week
 moinsdunjour=Less than a day
 datesprecises=Specific dates
 NotificationJoursAvant=Notification (days before)
+TacheDuree=Duration of task
+notifPersite=Persistence
 
 #################### essaim ########################################
 
@@ -296,6 +298,9 @@ evenement=Event
 
 # evenement/evenementSucreListe.html
 evenementssucre=Sugar events
+
+# evenement/evenementCommentListe.html
+evenementscomm=Comment events
 
 # evenement/evenementTraitementListe.html
 evenementstraitement=Treatment events
