notification affichage jours avant, après ou rien. Remplacement 0 par ""

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -164,6 +164,7 @@ moinsdunesemaine=Moins d'une semaine
 moinsdunjour=Moins d'un jour
 datesprecises=Dates précises
 NotificationJoursAvant=Notification (jours avant)
+NotificationJoursApres=Notification (jours après)
 TacheDuree=Tâche durée
 notifPersite=Persistance
 
@@ -344,7 +345,7 @@ evenementRemplissage=Ajouter un événement Remplissage
 haussenonsupprimeerefrecolte=Cette hausse ne peut être supprimée, elle est référencée dans une récolte
 supprimerevenement=Supprimer cet événement ?
 Hausses=Hausses
-remplissage=Remplissage
+remplissage=Remplissage %
 
 # hausses/hausseListe.html
 selecthaussestraiter=Sélectionner les hausses à traiter
