--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -164,6 +164,7 @@ moinsdunesemaine=Less than a week
 moinsdunjour=Less than a day
 datesprecises=Specific dates
 NotificationJoursAvant=Notification (days before)
+NotificationJoursApres=Notification (days after)
 TacheDuree=Duration of task
 notifPersite=Persistence
 
@@ -344,7 +345,7 @@ evenementRemplissage=Add a filling event
 haussenonsupprimeerefrecolte=This super cannot be deleted, it is used in an harvest
 supprimerevenement=Delete this event?
 Hausses=Supers
-remplissage=Filling
+remplissage=Filling %
 
 # hausses/hausseListe.html
 selecthaussestraiter=Select supers to be processed
