eve cadre et pesée rappel dernier eve essaim et non ruche

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -306,6 +306,7 @@ evenementscomm=Événements commentaire
 
 # evenement/evenementTraitementListe.html
 evenementstraitement=Événements traitement
+eveDebutTraitement=Événements début traitement
 
 # evenement/evenementPoidsRucheListe.html
 evenementspoidsruche=Événements poids ruche
