--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -306,6 +306,7 @@ evenementscomm=Comment events
 
 # evenement/evenementTraitementListe.html
 evenementstraitement=Treatment events
+eveDebutTraitement=Treatment start events
 
 # evenement/evenementPoidsRucheListe.html
 evenementspoidsruche=Hive weight events
