événements ajout "modifier tout"

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -123,6 +123,7 @@ essaimDateNaissSupAcquis=essaim(s) date naissance reine supérieure à date acqu
 
 # Templates commun
 modifier=Modifier
+modifierTout=Modifier tout
 nom=Nom
 active=Active
 latitude=Latitude
