--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -123,6 +123,7 @@ essaimDateNaissSupAcquis=swarm date of birth queen greater than date of acquisit
 
 # Templates commun
 modifier=Modify
+modifierTout=Modify all
 nom=Name
 active=Active
 latitude=Latitude
