événement détail controller et template, simplifications et liens even

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -268,6 +268,8 @@ traitement=Traitement varroa
 Essaims=Essaims
 essaim=Essaim
 PasDeRecolte=Pas de récolte
+Debut=Début
+Fin=Fin
 
 # essaim/essaimDispersionForm.html
 aideessaimdspersionform=Crée un événement dispersion, enlève l'essaim de la ruche et inactive l'essaim
