--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -268,6 +268,8 @@ traitement=Varroa treatment
 Essaims=Swarms
 essaim=Swarm
 PasDeRecolte=No harvest
+Debut=Beginning
+Fin=End
 
 # essaim/essaimDispersionForm.html
 aideessaimdspersionform=Create a dispersing event, remove the swarm from the hive and inactivate the swarm
