liste événements traitement ajout checkbox "tous"

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -282,7 +282,6 @@ dispersion=Dispersion
 # evenement/evenementNotifListe.html
 Notifications=Notifications
 JoursAvant=Jours avant
-Fin=Fin
 Persistant=Persistant
 
 # evenement/evenementNotifGantt.html
@@ -309,7 +308,7 @@ evenementscomm=Événements commentaire
 
 # evenement/evenementTraitementListe.html
 evenementstraitement=Événements traitement
-eveDebutTraitement=Événements début traitement
+eveDebutTraitement=Début traitement
 
 # evenement/evenementPoidsRucheListe.html
 evenementspoidsruche=Événements poids ruche
