--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -282,7 +282,6 @@ dispersion=Dispersing
 # evenement/evenementNotifListe.html
 Notifications=Notifications
 JoursAvant=Days before
-Fin=End
 Persistant=Lasting
 
 # evenement/evenementNotifGantt.html
@@ -309,7 +308,7 @@ evenementscomm=Comment events
 
 # evenement/evenementTraitementListe.html
 evenementstraitement=Treatment events
-eveDebutTraitement=Treatment start events
+eveDebutTraitement=Treatment start
 
 # evenement/evenementPoidsRucheListe.html
 evenementspoidsruche=Hive weight events
