detaillEssaim ajout test : cet essaim n'est pas dans une ruche

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -270,6 +270,7 @@ essaim=Essaim
 PasDeRecolte=Pas de récolte
 Debut=Début
 Fin=Fin
+essaimPasRuche=Cet essaim n'est pas dans une ruche
 
 # essaim/essaimDispersionForm.html
 aideessaimdspersionform=Crée un événement dispersion, enlève l'essaim de la ruche et inactive l'essaim
