--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -270,6 +270,7 @@ essaim=Swarm
 PasDeRecolte=No harvest
 Debut=Beginning
 Fin=End
+essaimPasRuche=This swarm is not in a hive
 
 # essaim/essaimDispersionForm.html
 aideessaimdspersionform=Create a dispersing event, remove the swarm from the hive and inactivate the swarm
