listes de transhumances pour tous le ruchers, on ignore le dépôt

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -508,6 +508,7 @@ ruchernonsupprimerefrecolte=Ce rucher ne peut être supprimé, il est référenc
 supprimerruchereteven=Supprimer ce rucher et ses événements ?
 supprimercerucher?=Supprimer ce rucher ?
 historique=Historique
+transhumances=Transhumances
 poidsVide=Poids
 nbCadres=Cadres
 rucher=Rucher
