--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -508,6 +508,7 @@ ruchernonsupprimerefrecolte=This apiary cannot be deleted, it is used in a harve
 supprimerruchereteven=Delete this apiary and all its events?
 supprimercerucher?=Delete this apiary?
 historique=History
+transhumances=Transhumances
 poidsVide=Weight
 nbCadres=Frames
 rucher=Apiary
