Transhumances utilisation d'un Record au lieu d'une Map

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -537,6 +537,8 @@ nb=Nb
 etat=État
 destProv=Dest/Prov
 grouper=Grouper
+Ajout=Ajout
+Retrait=Retrait
 
 # rucher/rucherDetailIgn.html
 parcours=Parcours
