--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -537,6 +537,8 @@ nb=Nb
 etat=State
 destProv=To/From
 grouper=Group
+Ajout=Addition
+Retrait=Withdrawal
 
 # rucher/rucherDetailIgn.html
 parcours=Route
