historique -> historique hausses et historique ruche/rucher

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -271,6 +271,7 @@ PasDeRecolte=Pas de récolte
 Debut=Début
 Fin=Fin
 essaimPasRuche=Cet essaim n'est pas dans une ruche
+histoRucheRucher=Historique ruche/rucher
 
 # essaim/essaimDispersionForm.html
 aideessaimdspersionform=Crée un événement dispersion, enlève l'essaim de la ruche et inactive l'essaim
@@ -450,6 +451,7 @@ ajoutRetraitHausses=Ajouter/Retirer/Réordonner des hausses
 Pasdehausse=Pas de hausse
 evenementCommentaire=Ajouter un événement Commentaire
 nomruchesvirgule=Cloner\nNom des ruches séparés par une virgule
+histoHausses=Historique hausses
 
 # ruche/rucheAjoutRetrait.html
 ajoutretraithausses=Ajout/Retrait/Ordre de hausses.
