--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -271,6 +271,7 @@ PasDeRecolte=No harvest
 Debut=Beginning
 Fin=End
 essaimPasRuche=This swarm is not in a hive
+histoRucheRucher=History hive/apiary
 
 # essaim/essaimDispersionForm.html
 aideessaimdspersionform=Create a dispersing event, remove the swarm from the hive and inactivate the swarm
@@ -450,6 +451,7 @@ ajoutRetraitHausses=Add/Remove/Reorder supers
 Pasdehausse=No super
 evenementCommentaire=Add a comment event
 nomruchesvirgule=Clone\nHive names separated with a comma
+histoHausses=History of supers
 
 # ruche/rucheAjoutRetrait.html
 ajoutretraithausses=Add/Remove/Order supers.
