--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -10,6 +10,9 @@ LAVANDE=Lavander
 CHATAIGNIER=Chestnut tree
 TOUTES_FLEURS=Polyfloral
 ROMARIN=Rosemary
+THYM=Thyme
+ACACIA=Acacia
+TILLEUL=Linden
 
 # enum evenement/TypeEvenement.java
 RUCHEAJOUTRUCHER=Add in an apiary
