ruche, essaim, rucher, hausse ajout controle unicité nom coté serveur

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -348,7 +348,7 @@ hausse=Hausse
 # hausse/hausseDetail.html
 supprimerhausseevenement=Supprimer cette hausse et ses événements ?
 nomhaussesvirgule=Cloner\nNom des hausses séparés par une virgule
-supprimerhausse?=Supprimer cette hausse ?
+supprimerhausse=Supprimer cette hausse ?
 evenementRemplissage=Ajouter un événement Remplissage
 haussenonsupprimeerefrecolte=Cette hausse ne peut être supprimée, elle est référencée dans une récolte
 supprimerevenement=Supprimer cet événement ?
