--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -348,7 +348,7 @@ hausse=Super
 # hausse/hausseDetail.html
 supprimerhausseevenement=Delete this super and all its events?
 nomhaussesvirgule=Clone\nSuper names separated with a comma
-supprimerhausse?=Delete this super?
+supprimerhausse=Delete this super?
 evenementRemplissage=Add a filling event
 haussenonsupprimeerefrecolte=This super cannot be deleted, it is used in an harvest
 supprimerevenement=Delete this event?
