ajouté log utilisateur connecté (SecurityConfig.java)

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -69,6 +69,7 @@ voirLatLon=Afficher latitude et longitude dans les listes
 datedecalee=Date décalée
 
 # login.html
+CONNECTE={} s'est connecté
 nomOuPassIncorrect=Nom d\'utilisateur ou mot de passe incorrect
 deconnecte=Vous avez été déconnecté
 nomUtilisateur=Nom d\'utilisateur
