--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -69,6 +69,7 @@ voirLatLon=Show latitude et longitude in lists
 datedecalee=Shifted date
 
 # login.html
+CONNECTE={} connected
 nomOuPassIncorrect=Incorrect user name or password
 deconnecte=You have been disconnected
 nomUtilisateur=User name
