--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -71,7 +71,7 @@ datedecalee=Date décalée
 # login.html
 CONNECTE={} s'est connecté
 nomOuPassIncorrect=Nom d\'utilisateur ou mot de passe incorrect
-deconnecte=Vous avez été déconnecté
+deconnecte=Vous avez été déconnecté(e)
 nomUtilisateur=Nom d\'utilisateur
 motDePasse=Mot de passe
 affichermotdepasse=Afficher le mot de passe ?
