chart.js 4.2.0, ajout/retrait hausses améliorations log sql

--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -469,6 +469,7 @@ retraitDeLaruche=Remove from hive {0}
 # ruche/rucheHausseForm.html
 hausseXX=Super {0}
 ajoutSurLaruche=Add on hive {0}
+retraitDeLaruche=This super will be removed from the hive {0}
 
 # ruche/rucheTypesListe.html
 rucheType= Hive type
