--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -469,6 +469,7 @@ retraitDeLaruche=Retrait de la ruche {0}
 # ruche/rucheHausseForm.html
 hausseXX=Hausse {0}
 ajoutSurLaruche=Ajout sur la ruche {0}
+retraitDeLaruche=Attention cette hausse sera retirée de la ruche {0}
 
 # ruche/rucheTypesListe.html
 rucheType= Type de ruche
