login améliorations affichage et controles serveur

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -365,7 +365,7 @@ selecthaussestraiter=Sélectionner les hausses à traiter
 prenom=Prénom
 email=Email
 login=Login
-roles=Rôles
+roles=Rôle
 listePersonnes=Liste des personnes
 ajouterPersonne=Ajouter une personne
 Personnes=Personnes
