--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -365,7 +365,7 @@ selecthaussestraiter=Select supers to be processed
 prenom=First name
 email=Email
 login=Login
-roles=Roles
+roles=Role
 listePersonnes=Persons list
 ajouterPersonne=Add a person
 Personnes=People
