ajouté icone géolocalisation manquant, pied de page modifié

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -48,7 +48,7 @@ clonehaussecreees=Hausse(s) {0} créée(s)
 #################### Templates ########################################
 
 # include.html
-include.footer= *** Ruches - GPL3 - 
+include.footer=Ruches - GPL3 - 
 liste=Liste
 listedetail=Liste détaillée
 Admin=Admin
