rucher détail carto ign et osm améliorations javascript

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -567,6 +567,7 @@ exportKML=Export KML
 parcoursRecalcul=Re-calculer le parcours des ruches
 cercles=Cercles
 dessinEnregistre = Dessin enregistré
+distRuchesOk=Distances ruches correctes
 
 # rucher/ruhersListeIgn.html
 couchemarqueursruchers=Couche des marqueurs Ruchers
