--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -567,6 +567,7 @@ exportKML=KML export
 parcoursRecalcul=Re-calculate hive route
 cercles=Circles
 dessinEnregistre = Drawing saved
+distRuchesOk=Hive distances are correct
 
 # rucher/ruhersListeIgn.html
 couchemarqueursruchers=Apiary marker layer
