Ajout suppression d'un type de ruche

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -471,8 +471,12 @@ hausseXX=Hausse {0}
 ajoutSurLaruche=Ajout sur la ruche {0}
 retraitDeLaruche=Attention cette hausse sera retirée de la ruche {0}
 
-# ruche/rucheTypesListe.html
+# ruchetype/rucheTypesListe.html
 rucheType= Type de ruche
+
+# ruchetype/rucheTypesDetail.html
+suppTypeRuche=Supprimer ce type de ruche ?
+typeRucheSuppNon=Ce type de ruche ne peut être supprimé
 
 # ruche/ruchesListe.html
 ruche=Ruche
