--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -471,8 +471,12 @@ hausseXX=Super {0}
 ajoutSurLaruche=Add on hive {0}
 retraitDeLaruche=This super will be removed from the hive {0}
 
-# ruche/rucheTypesListe.html
+# ruchetype/rucheTypesListe.html
 rucheType= Hive type
+
+# ruchetype/rucheTypesDetail.html
+suppTypeRuche=Delete this hive type ?
+typeRucheSuppNon=You cannot delete this hive type
 
 # ruche/ruchesListe.html
 ruche=Hive
