ajout du nombre de ruches dans la lite des types de ruches

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -471,7 +471,8 @@ ajoutSurLaruche=Ajout sur la ruche {0}
 retraitDeLaruche=Attention cette hausse sera retirée de la ruche {0}
 
 # ruchetype/rucheTypesListe.html
-rucheType= Type de ruche
+rucheType=Type de ruche
+nbRuches=Nb ruches
 
 # ruchetype/rucheTypesDetail.html
 suppTypeRuche=Supprimer ce type de ruche ?
