--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -471,7 +471,8 @@ ajoutSurLaruche=Add on hive {0}
 retraitDeLaruche=This super will be removed from the hive {0}
 
 # ruchetype/rucheTypesListe.html
-rucheType= Hive type
+rucheType=Hive type
+nbRuches=Nb hives
 
 # ruchetype/rucheTypesDetail.html
 suppTypeRuche=Delete this hive type ?
