Tim des noms essaims, ruches, ruchers, hausses, personnes

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -371,6 +371,7 @@ Personnes=Personnes
 
 # personne/personneForm.html
 emailexiste=Cet email est déjà utilisé
+loginexiste=Ce login est déjà utilisé
 personne=Personne
 
 # personne/personneDetail.html
