--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -371,6 +371,7 @@ Personnes=People
 
 # personne/personneForm.html
 emailexiste=This email is already used
+loginexiste=This login is already used
 personne=People
 
 # personne/personneDetail.html
