url doc dans messages.properties, le chapitre reste dans les templates

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -47,6 +47,9 @@ clonehaussecreees=Hausse(s) {0} créée(s)
 
 #################### Templates ########################################
 
+# doc
+urldoc=/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc
+
 # include.html
 liste=Liste
 listedetail=Liste détaillée
