--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -47,6 +47,9 @@ clonehaussecreees=Super(s) {0} created
 
 #################### Templates ########################################
 
+# doc
+urldoc=/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc
+
 # include.html
 liste=List
 listedetail=Detailed list
