clone ruche et hausse ajout controles java

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -33,6 +33,7 @@ RUCHECADRE=Cadres de la ruche
 
 # ruche/RucheController.java
 cloneruchecreees=Ruche(s) {0} créée(s)
+PasDeRucheCree=Pas de ruche créée
 
 # essaim/EssaimController.java
 cloneessaimcrees=Essaim(s) {0} créé(s)
@@ -44,6 +45,7 @@ haussesEnlevees=Les hausses {0} ont été enlevées des ruches {1}
 
 # hausse/HausseController.java
 clonehaussecreees=Hausse(s) {0} créée(s)
+PasDeHausseCree=Pas de hausse créée
 
 #################### Templates ########################################
 
