--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -33,6 +33,7 @@ RUCHECADRE=Cadres de la ruche
 
 # ruche/RucheController.java
 cloneruchecreees=Hives(s) {0} created
+PasDeRucheCree=No hive created
 
 # essaim/EssaimController.java
 cloneessaimcrees=Swarm(s) {0} created
@@ -44,6 +45,7 @@ haussesEnlevees=Supers {0} have been removed from their hives {1}
 
 # hausse/HausseController.java
 clonehaussecreees=Super(s) {0} created
+PasDeHausseCree=No super created
 
 #################### Templates ########################################
 
