--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -73,7 +73,7 @@ voirLatLon=Afficher latitude et longitude dans les listes
 datedecalee=Date décalée
 
 # login.html
-CONNECTE={} s'est connecté
+CONNECTE={} s'est connecté(e)
 nomOuPassIncorrect=Nom d\'utilisateur ou mot de passe incorrect
 deconnecte=Vous avez été déconnecté(e)
 nomUtilisateur=Nom d\'utilisateur
@@ -83,7 +83,7 @@ connexion=Connexion
 forgotPassword=Mot de passe oublié ?
 
 # index.html
-connecte=Connecté
+connecte=Connecté(e)
 deconnexion=Déconnexion
 
 # passwordResetForm.html resetPasswordForm.html
