jquery 3.6.4 -> 3.7.0, poids table récolte type=number

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -410,6 +410,7 @@ poidsAvantSupPoidsApres=Le poids avant extraction doit être supérieur ou égal
 poidsVideKg=Poids vide {0}kg
 
 # recolte/recolteDetail.html
+SaisiePoidsMiel=Saisie des poids de miel
 recolte=Récolte
 poidsMiel=Poids de miel
 enlverhaussesrecoltedelai=La récolte date de plus de {0} jours, abandon.
