--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -410,6 +410,7 @@ poidsAvantSupPoidsApres=The weight before extraction must be greater than or equ
 poidsVideKg=Empty weight {0}kg
 
 # recolte/recolteDetail.html
+SaisiePoidsMiel=Honey weight entry
 recolte=Harvest
 poidsMiel=Honey weight
 enlverhaussesrecoltedelai= The harvest is more than {0} days old, abort.
