recolteMielForm ajout highlight lignes modifiées et controles js

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -437,6 +437,10 @@ PoidsMielAnneeKg=Poids de miel par année en kg
 Pots=Pots
 HaussesEssaim=Hausses/Essaim
 
+# recolteMielForm.html
+poidsAv=Poids avant
+poidsAp=Poids après
+
 #################### ruche ########################################
 
 # ruche/ruchesListePlus.html ruche/ruchesListePlusRucher.html
