--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -437,6 +437,10 @@ PoidsMielAnneeKg=Honey weight by year in kg
 Pots=Pots
 HaussesEssaim=Supers/Swarm
 
+# recolteMielForm.html
+poidsAv=Weight before
+poidsAp=Weight after
+
 #################### ruche ########################################
 
 # ruche/ruchesListePlus.html ruche/ruchesListePlusRucher.html
