écrans type de ruches dt-responsive

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -544,7 +544,7 @@ nbXHausses={0} hausse(s)
 carteGg=Carte Google
 carteIgn=Carte IGN
 carteOsm=Carte OSM
-statistiquesruchers=Statistiques ruchers
+statistiquesruchers=Statistiques production des ruchers
 actif=Actif
 Ruchers=Ruchers
 contact=Contact
