--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -544,7 +544,7 @@ nbXHausses={0} super(s)
 carteGg=Google Map
 carteIgn=IGN Map
 carteOsm=OSM Map
-statistiquesruchers=Apiary statistics
+statistiquesruchers=Apiaries production statistics
 actif=Active
 Ruchers=Apiaries
 contact=Contact
