Attention breaking change, champ ruche production à ajouter.
su postgres
psql  -c 'alter table ruche add column production boolean not null
default TRUE;' ruchesdev
psql  -c 'alter table ruche alter column production drop default;'
ruchesdev

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -134,6 +134,8 @@ modifier=Modifier
 modifierTout=Modifier tout
 nom=Nom
 active=Active
+prod=Prod
+production=Production
 latitude=Latitude
 longitude=Longitude
 altitude=Altitude
