--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -134,6 +134,8 @@ modifier=Modify
 modifierTout=Modify all
 nom=Name
 active=Active
+prod=Prod
+production=Production
 latitude=Latitude
 longitude=Longitude
 altitude=Altitude
