infos.html ajout nb ruches production/élevage, réorganisation code

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -103,6 +103,9 @@ HistRuchesFinOK=Historique ruches : après traitement des événements tous les 
 HistRuchesFinKO=Historique ruches : après traitement des événements, des ruches ont encore des hausses
 
 # infos.html
+hausses=hausses
+production=production
+elevage=élevage
 ruchersdepot=ruchers (avec le dépôt)
 rucheset=ruches et 
 haussesactives=hausses actives	
@@ -121,7 +124,7 @@ nbTraitements=Nb traitements
 ruchesAvecEssaimDepot=ruche(s) avec essaim au dépôt
 ruchesAvecHaussesDepot=ruche(s) avec hausses au dépôt
 ruchesSansEssaimPasDepot=ruche(s) sans essaim qui ne sont pas au dépôt
-essaimsActifsHorsRuche=essaim(s) actif(s) hors ruche
+essaimsHorsRuche=essaim(s) hors ruche
 ruchersLoinDeLeursRuches=rucher(s) à plus de {0}m du barycentre de leurs ruches
 rayonkm=Rayon (km)
 surfacekm2=Surface (km²)
@@ -135,7 +138,6 @@ modifierTout=Modifier tout
 nom=Nom
 active=Active
 prod=Prod
-production=Production
 latitude=Latitude
 longitude=Longitude
 altitude=Altitude
