--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -103,6 +103,9 @@ HistRuchesFinOK=Hive history : after processing the events all the hives have no
 HistRuchesFinKO=Hive history : after processing the events some hives still have supers
 
 # infos.html
+hausses=supers
+production=production
+elevage=breeding
 ruchersdepot=apiaries (with depot)
 rucheset=hives and 
 haussesactives=active supers	
@@ -121,7 +124,7 @@ nbTraitements=Nb treatments
 ruchesAvecEssaimDepot=hive(s) with swarm at the depot
 ruchesAvecHaussesDepot=hive(s) with supers at the depot
 ruchesSansEssaimPasDepot=hive(s) without swarm not at the depot
-essaimsActifsHorsRuche=active swarm(s) outside the hive
+essaimsHorsRuche=swarm(s) outside the hive
 ruchersLoinDeLeursRuches=apiaries more than {0}m from their hives
 rayonkm=Radius (km)
 surfacekm2=Surface (km²)
@@ -135,7 +138,6 @@ modifierTout=Modify all
 nom=Name
 active=Active
 prod=Prod
-production=Production
 latitude=Latitude
 longitude=Longitude
 altitude=Altitude
