Transhumances ajout datatables et dt-responsive

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -526,6 +526,7 @@ doitEtreSupA=Doit être supérieure à
 # rucher/rucherStatistiques.html
 aideStatistiqueRucher=Récolte : nombre de récoltes<br/>Poids de miel produit Total, Max, Min et Moyen en kg :<br/>- Total pour le rucher<br/>- Récolte Max et Min<br/>- Moyen par récolte
 ProductionRecolte=Production par récolte
+ruchersProdRecolte=Ruchers statistiques de production
 
 # rucher/rucherDetail.html
 Pasderuche=Pas de ruche dans ce rucher
