--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -526,6 +526,7 @@ doitEtreSupA=Must be greater than
 # rucher/rucherStatistiques.html
 aideStatistiqueRucher=Harvest : number of harvests<br/>Weight of honey produced, Max, Min and Average (kg) :<br/>- Total for apiary<br/>- Harvest Max and Min<br/>- Average by harvest
 ProductionRecolte=Production per harvest
+ruchersProdRecolte=Apiaries production statistics
 
 # rucher/rucherDetail.html
 Pasderuche=No hive in this apiary
