liste rucheTypes affichage nb ruche avec et sans essaim

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -487,7 +487,8 @@ retraitDeLaruche=Attention cette hausse sera retirée de la ruche {0}
 
 # ruchetype/rucheTypesListe.html
 rucheType=Type de ruche
-nbRuches=Nb ruches
+nbRuchesEssaim=Nb ruches avec essaim
+nbRuchesSansEssaim=Nb ruches sans essaim
 
 # ruchetype/rucheTypesDetail.html
 suppTypeRuche=Supprimer ce type de ruche ?
