--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -487,7 +487,8 @@ retraitDeLaruche=This super will be removed from the hive {0}
 
 # ruchetype/rucheTypesListe.html
 rucheType=Hive type
-nbRuches=Nb hives
+nbRuchesEssaim=Nb hives with swarm
+nbRuchesSansEssaim=Nb hives without swarm
 
 # ruchetype/rucheTypesDetail.html
 suppTypeRuche=Delete this hive type ?
