Liste détaillée remplacé affichage 3 derniers commentaires par évén.

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -447,9 +447,9 @@ poidsAp=Poids après
 #################### ruche ########################################
 
 # ruche/ruchesListePlus.html ruche/ruchesListePlusRucher.html
-commentaire1=Commentaire1
-commentaire2=Commentaire2
-commentaire3=Commentaire3
+evenement1=Événement1
+evenement2=Événement2
+evenement3=Événement3
 PoidsTotal=Poids total
 
 # ruche/rucheDetail.html
