--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -447,9 +447,9 @@ poidsAp=Weight after
 #################### ruche ########################################
 
 # ruche/ruchesListePlus.html ruche/ruchesListePlusRucher.html
-commentaire1=Comments1
-commentaire2=Comments2
-commentaire3=Comments3
+evenement1=Event1
+evenement2=Event2
+evenement3=Event3
 PoidsTotal=Total weight
 
 # ruche/rucheDetail.html
