detailEssaim, Ruche et Hausse Dernier événements, et type Commentaire

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -284,6 +284,7 @@ Debut=Début
 Fin=Fin
 essaimPasRuche=Cet essaim n'est pas dans une ruche
 histoRucheRucher=Historique ruche/rucher
+derniersEve=Derniers événements
 
 # essaim/essaimDispersionForm.html
 aideessaimdspersionform=Crée un événement dispersion, enlève l'essaim de la ruche et inactive l'essaim
