--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -284,6 +284,7 @@ Debut=Beginning
 Fin=End
 essaimPasRuche=This swarm is not in a hive
 histoRucheRucher=History hive/apiary
+derniersEve=Last events
 
 # essaim/essaimDispersionForm.html
 aideessaimdspersionform=Create a dispersing event, remove the swarm from the hive and inactivate the swarm
