--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -452,6 +452,7 @@ evenement1=Event1
 evenement2=Event2
 evenement3=Event3
 PoidsTotal=Total weight
+datePoseHausse=Super addition date
 
 # ruche/rucheDetail.html
 ruchenepeutetresupprimeerecolte=This hive cannot be deleted, it is used in a harvest
