--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -452,7 +452,7 @@ evenement1=Événement1
 evenement2=Événement2
 evenement3=Événement3
 PoidsTotal=Poids total
-datePoseHausse=Date pose hausse
+poseHausse=Pose hausse
 
 # ruche/rucheDetail.html
 ruchenepeutetresupprimeerecolte=Cette ruche ne peut être supprimée, elle est référencée dans une récolte
