recoltesStatEssaim ajouté checkbox "tous" les essaims même sans prod

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -395,6 +395,7 @@ contactRuchers=Contact pour les Ruchers
 # recolte/recoltesStatEssaim.html
 Totalpage=Total page
 ProductionEssaims=Production Essaims/
+tousEssaims=Afficher les essaims sans production
 
 # recolte/recoltesListe.html
 statistiquesProd=Statistiques production annuelle
