--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -395,6 +395,7 @@ contactRuchers=Contact for the Apiaries
 # recolte/recoltesStatEssaim.html
 Totalpage=Total page
 ProductionEssaims=Production. Swarms/
+tousEssaims=Show swarms without production
 
 # recolte/recoltesListe.html
 statistiquesProd=Annual production statistics
