méthode services visibilité default si possible (ucdetector)

--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -188,13 +188,13 @@ Essaimage=Swarming
 NomNouvelEssaim=Name of the new swarm
 
 # essaim/essaimStatistiques.html
-ageReines=Queen's age
-aideReineIgnorees=These queens are not taken into account in these statistics
+# ageReines=Queen's age
+# aideReineIgnorees=These queens are not taken into account in these statistics
 Max=Max
 Min=Min
 Moyen=Average
 Duree=Duration
-aideStatistiqueEssaim=Swarm duration of existence (days)<br/>Weight of honey produced, Max, Min et Average (kg) :<br/>- Total over duration of existence<br/>- Harvest Max and Min<br/>- Average by year of existence
+aideStatistiqueEssaim=Swarm duration of existence (days)<br/>Weight of honey produced in kg :<br/>- Total over duration of existence<br/>- Harvest Max and Min<br/>- Average by year of existence
 masquerInactif=Hide inactives
 Production=Production
 
