--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -188,13 +188,13 @@ Essaimage=Essaimage
 NomNouvelEssaim=Nom du nouvel essaim
 
 # essaim/essaimStatistiques.html
-ageReines=Âge des reines
-aideReineIgnorees=Ces reines ne sont pas prises en compte dans ces statistiques
+# ageReines=Âge des reines
+# aideReineIgnorees=Ces reines ne sont pas prises en compte dans ces statistiques
 Max=Max
 Min=Min
 Moyen=Moyen
 Duree=Durée
-aideStatistiqueEssaim=Durée d'existence de l'essaim en jours<br/>Poids de miel produit Total, Max, Min et Moyen en kg :<br/>- Total sur la durée d'existence<br/>- Récolte Max et Min<br/>- Moyen par année d'existence
+aideStatistiqueEssaim=Durée d'existence de l'essaim en jours<br/>Poids de miel produit en kg :<br/>- Total sur la durée d'existence<br/>- Récolte Max et Min<br/>- Moyen par année d'existence
 masquerInactif=Masquer les inactifs
 Production=Production
 
