liste even notifications localisation "Destinataire(s)"

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -4,6 +4,9 @@ Idrucherinconnu=Identifiant rucher inconnu
 Idessaiminconnu=Identifiant essaim inconnu
 Idhausseinconnu=Identifiant hausse inconnu
 
+# evenement/EvenementCoonctroller.java
+Destinataires=Destinataire(s)
+
 # enum recolte/TypeMiel.java
 GARRIGUE=Garrigue
 LAVANDE=Lavande
