--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -4,6 +4,9 @@ Idrucherinconnu=Unknown apiary id
 Idessaiminconnu=Unknown swarm id
 Idhausseinconnu=Unknown super id
 
+# evenement/EvenementCoonctroller.java
+Destinataires=Recipient(s)
+
 # enum recolte/TypeMiel.java
 GARRIGUE=Garrigue
 LAVANDE=Lavander
