raccourci clavier sur menu Ruches liste détaillée

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -57,7 +57,7 @@ urldoc=/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc
 
 # include.html
 liste=Liste
-listedetail=Liste détaillée
+listedetail=Liste <span class="menurac">d</span>étaillée
 Admin=Admin
 logs=Logs
 infos=Infos
