--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -57,7 +57,7 @@ urldoc=/doc/ruches.html#%5F%5FRefHeading%5F%5F%5FToc
 
 # include.html
 liste=List
-listedetail=Detailed list
+listedetail=<span class="menurac">D</span>etailed list
 Admin=Admin
 logs=Logs
 infos=Infos
