thème clair/sombre suppression des couleurs th, logo vert miel

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -213,6 +213,7 @@ MielDescKg=Miel descendance(kg)
 Inactif=Inactif
 
 # essaim/essaimsListe.html
+essaimAcquisition=Essaim acquisition
 statistiquesproduction=Statistiques production
 statistiquesage=Statistiques âge des reines
 selectessaimstraiter=Sélectionner les essaims à traiter
@@ -265,6 +266,16 @@ retourrucheaudepot=Retour de la ruche au dépôt
 rucheAjouteeAuRucher=Ruche {0} ajoutée le {1} au rucher {2}
 
 # essaim/essaimDetail.html
+dateEssaim=Date essaim
+dateRuche=Date ruche
+dateTraitement=Date traitement
+commentaireTraitement=Commentaire traitement
+dateSucre=Date sucre
+commentaireSucre=Commentaire sucre
+datePesee=Date pesée
+commentairePesee=Commentaire pesée
+dateCadre=Date cadre
+commentaireCadre=Commentaire cadre
 essaimsupprimerecolte=Cette essaim ne peut être supprimé, il est référencé dans une récolte
 supprimeressaimevenements=Supprimer cet essaim et ses événements ?
 supprimeressaim=Supprimer cette essaim ?
@@ -359,6 +370,7 @@ ajouterHausse=Ajouter une hausse
 hausse=Hausse
 
 # hausse/hausseDetail.html
+commentaireremplissage=Commentaire remplissage
 supprimerhausseevenement=Supprimer cette hausse et ses événements ?
 nomhaussesvirgule=Cloner\nNom des hausses séparés par une virgule
 supprimerhausse=Supprimer cette hausse ?
@@ -534,6 +546,8 @@ ProductionRecolte=Production par récolte
 ruchersProdRecolte=Ruchers statistiques de production
 
 # rucher/rucherDetail.html
+distance=Distance
+temps=Temps
 Pasderuche=Pas de ruche dans ce rucher
 depotNePeutEtreSupprime=Le dépôt ne peut être supprimé
 ruchernonsupprimerefrecolte=Ce rucher ne peut être supprimé, il est référencé dans une récolte
