--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -213,6 +213,7 @@ MielDescKg=Descendants honey(kg)
 Inactif=Inactive
 
 # essaim/essaimsListe.html
+essaimAcquisition=Swarm acquisition
 statistiquesproduction=Production satistics
 statistiquesage=Queens age statistics
 selectessaimstraiter=Select swarms for treatment
@@ -265,6 +266,16 @@ retourrucheaudepot=Hive back to depot
 rucheAjouteeAuRucher=Hive {0} added on {1} to the apiary {2}
 
 # essaim/essaimDetail.html
+dateEssaim=Swarm date
+dateRuche=Hive date
+dateTraitement=Treatment date
+commentaireTraitement=Treatment comment
+dateSucre=Sugar date
+commentaireSucre=Sugar comment
+datePesee=Weighing date
+commentairePesee=Weighing date
+dateCadre=Frame date
+commentaireCadre=Frame comment
 essaimsupprimerecolte=This swarm cannot be deleted, it is used in an harvest
 supprimeressaimevenements=Delete this swarm and his events?
 supprimeressaim=Delete this swarm?
@@ -359,6 +370,7 @@ ajouterHausse=Add a super
 hausse=Super
 
 # hausse/hausseDetail.html
+commentaireremplissage=Filling comment
 supprimerhausseevenement=Delete this super and all its events?
 nomhaussesvirgule=Clone\nSuper names separated with a comma
 supprimerhausse=Delete this super?
@@ -534,6 +546,8 @@ ProductionRecolte=Production per harvest
 ruchersProdRecolte=Apiaries production statistics
 
 # rucher/rucherDetail.html
+distance=Distance
+temps=Time
 Pasderuche=No hive in this apiary
 depotNePeutEtreSupprime=The depot cannot be deleted
 ruchernonsupprimerefrecolte=This apiary cannot be deleted, it is used in a harvest
