--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -93,7 +93,6 @@ deconnexion=Déconnexion
 resetPassword=Réinitialistation du mot de passe
 
 # tests.html
-testsEven=Tests des événements
 EvenIncomplets=Événements incomplets
 PasEvenIncomplets=Pas d\'événements incomplets
 HistRuchersEveOK=Historique ruchers pas d\'événements incorrects
@@ -104,6 +103,10 @@ HistHaussesEveOK=Historique ajout/retrait hausses pas d\'événements incorrects
 HistHaussesEveKO=Historique ajout/retrait hausses : événements incorrects
 HistRuchesFinOK=Historique ruches : après traitement des événements tous les ruches n\'ont plus de hausse
 HistRuchesFinKO=Historique ruches : après traitement des événements, des ruches ont encore des hausses
+EssDisperseActifKO=Essaims dispersé et actifs
+EssDisperseActifOK=Pas d'essaims dispersé et actifs
+EssInactSansDisperKO=Essains inactifs sans événement dispersion
+EssInactSansDisperOK=Pas d'essains inactifs sans événement dispersion
 
 # infos.html
 hausses=hausses
