--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -93,7 +93,6 @@ deconnexion=Disconnect
 resetPassword=Reset password
 
 # tests.html
-testsEven=Events tests
 EvenIncomplets=Incomplete events
 PasEvenIncomplets=No incomplete events
 HistRuchersEveOK=Apiaries history no incorrect events 
@@ -104,6 +103,11 @@ HistHaussesEveOK=Historique ajout/retrait hausses no incorrect events
 HistHaussesEveKO=Historique ajout/retrait hausses : incorrect events
 HistRuchesFinOK=Hive history : after processing the events all the hives have no super
 HistRuchesFinKO=Hive history : after processing the events some hives still have supers
+EssDisperseActifKO=Dispersed and active swarms
+EssDisperseActifOK=No dispersed and active swarms
+EssInactSansDisperKO=Inactive swarms without dispersion event
+EssInactSansDisperOK=No inactive swarms without dispersion event
+
 
 # infos.html
 hausses=supers
